[gd_scene load_steps=4 format=3 uid="uid://co754qs3udgo"]

[ext_resource type="Script" uid="uid://cfllp3obi55d7" path="res://scripts/enemy_weapon.gd" id="1_70kub"]
[ext_resource type="Texture2D" uid="uid://vli1iqfci0st" path="res://assets/armas/M4A2_Enemy_Hand.png" id="2_ll2ne"]
[ext_resource type="Texture2D" uid="uid://d0lhb633i4tgj" path="res://assets/fx/shoot.png" id="3_0v63h"]

[node name="EnemyWeapon" type="Node2D"]
rotation = 3.14159
scale = Vector2(1.3, 1.3)
script = ExtResource("1_70kub")

[node name="WeaponSprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(9.23077, -8.0698e-07)
texture = ExtResource("2_ll2ne")
flip_v = true

[node name="Marker1" type="Marker2D" parent="WeaponSprite"]
position = Vector2(32, 8.5)

[node name="Ejector1" type="Marker2D" parent="WeaponSprite"]
position = Vector2(-11, 16)

[node name="Shoot1" type="Sprite2D" parent="WeaponSprite"]
position = Vector2(56, 7.5)
scale = Vector2(1.5, 3)
texture = ExtResource("3_0v63h")
